manifests/deployment-productpage-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productpage-dev
  labels:
    app: productpage
    version: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productpage
      version: dev
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: productpage
        version: dev
        maistra.io/expose-route: "true"
    spec:
      containers:
        - name: productpage
          image: quay.io/monishkumar/project-demo:dev
          imagePullPolicy: Always
          ports: 
            - containerPort: 8080
              protocol: TCP
              name: "tcp-8080"
