manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: productpage-dev
spec:
#   type: ClusterIP
  selector:
    app: productpage
    version: dev
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
