manifests/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: productpage
spec:
  host: productpage
  subsets:
  - name: dev
    labels:
      version: dev
  - name: dev1
    labels:
      version: dev1
