manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: productpage-dev-route
spec:
  to:
    kind: Service
    name: productpage-dev
  path: /WebApp
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
