manifests/virtualservice-canary-productpage-1.1-SNAPSHOT.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: productpage-1.1-SNAPSHOT
spec:
  hosts:
    - productpage
  http:
    - route:
        - destination: productpage
          weight: "45"
        - destination: {host: productpage, subset: "v1\n1.1-SNAPSHOT", 0: [{host: productpage}, {subset: "v1\n1.1-SNAPSHOT\n1.1-SNAPSHOT"}, {host: productpage}, {subset: "v1\n1.1-SNAPSHOT\n1.1-SNAPSHOT"}]}
          weight: "45"
        - destination: {0: [{host: productpage}, {subset: "v1\n1.1-SNAPSHOT\n1.1-SNAPSHOT"}, {host: productpage}, {subset: "v1\n1.1-SNAPSHOT\n1.1-SNAPSHOT"}]}
          weight: "45"
        - destination: {0: [{host: productpage}, {subset: "v1\n1.1-SNAPSHOT\n1.1-SNAPSHOT"}]}
          weight: "45"
