manifests/virtualservice-canary-productpage-dev.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: productpage-dev
spec:
  hosts:
    - productpage
  http:
    - route:
        - destination:
            host: productpage
            subset: dev
          weight: 100
