manifests/virtualservice.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  namespace: dev
  name: productpage
  labels:
    kiali_wizard: request_routing
spec:
  http:
    - route:
        - destination:
            host: productpage.dev.svc.cluster.local
            subset: dev
          weight: 70
        - destination:
            host: productpage.dev.svc.cluster.local
            subset: dev1
          weight: 30 
  hosts:
    - '*'
  gateways:
    - dev/productpage-gateway
